docs/styles/style.css
@charset "UTF-8";
@import "reset.css";
@import "color.css";
@import "typography.css";

/* GENERAL */

body {
  text-align: center;
  background: var(--color-foreground-level-1);
  font-family: var(--font-stack);
  cursor: default;
  -webkit-font-smoothing: antialiased;
  width: 100%;
}

.overflow-killer {
  overflow-x: hidden;
}

svg {
  flex-shrink: 0;
}

.container {
  margin: 2rem auto 4rem;
  padding: 0 2rem;
}

::selection {
  background-color: var(--color-primary);
  color: white;
}

.blend {
  mix-blend-mode: exclusion;
  color: var(--color-background);
}

input[type="email"] {
  padding: 0 0 0 0.5rem;
  border-radius: 0.25rem;
  margin: 0 0.5rem;
  color: var(--color-background);
  width: 15.625rem;
  height: 2rem;
}

button {
  padding: 0 0.75rem;
  border-radius: 0.25rem;
  height: 2rem;
  color: var(--color-background);
  cursor: pointer;
  border: 0.0625rem solid var(--color-foreground-level-2);
  font-weight: 600;
}

button:active {
  transition: none;
  opacity: 0.5;
}

/* HEADER */

header {
  max-width: 105rem;
  margin: 2rem auto;
  padding: 0 2rem;
  text-align: left;
}

header #logo {
  text-decoration: none;
  border: 0;
}

#logo svg {
  width: 8rem;
}

@media only screen and (max-width: 30rem) {
  #logo svg {
    width: 6rem;
  }
}

header {
  display: flex;
  justify-content: space-between;
}

@media only screen and (max-width: 30rem) {
  header {
    flex-direction: column;
    align-items: center;
  }
}

header nav {
  display: flex;
  position: relative;
  top: 0.5rem;
}

header nav a {
  margin-right: 3rem;
  font-size: 1.25rem;
  font-weight: 600;
  color: var(--color-foreground);
  text-decoration: none;
  white-space: nowrap;
  border: 0;
}

@media only screen and (max-width: 40rem) {
  header nav a {
    font-size: 1rem;
    margin-right: 1rem;
  }

  a.try-it {
    display: none;
  }
}

@media only screen and (max-width: 48rem) {
  a.try-it {
    display: none;
  }

  a.code {
    margin-right: 0;
  }
}

header nav a:last-child {
  margin-right: 0;
}

nav a:hover {
  text-decoration: none;
  color: var(--color-secondary);
}

nav a span {
  border: none;
}

nav a:hover span {
  border-bottom: 0.125rem solid;
}

/* SUBTITLE */

#headline {
  position: relative;
  padding-bottom: 2rem;
  background: var(--color-foreground-level-1);
}

#headline h2 {
  font-weight: 600;
  background-color: var(--color-background);
  z-index: 2;
  position: relative;
  padding: 0.5rem 1rem;
  border-radius: 0.5rem;
  margin: 0 auto;
  width: min-content;
  white-space: nowrap;
}

@media only screen and (max-width: 40.5rem) {
  #headline h2 span {
    display: block;
  }
}

@media only screen and (max-width: 30rem) {
  #headline h2 {
    font-size: 1rem;
  }
}

.gif {
  border-radius: 0.25rem;
}

.headline-gif {
  position: absolute;
  top: 14vw;
  left: 22vw;
  width: 40vw;
  z-index: 0;
}

@media only screen and (max-width: 30rem) {
  .headline-gif {
    top: 70vw;
    left: 12vw;
    width: 60vw;
  }
}

.headline {
  text-transform: uppercase;
  font-size: 30vw;
  line-height: 28vw;
  background: linear-gradient(
    90deg,
    #ff5555 -8.25%,
    #0000ff 2.57%,
    #00bf66 33.08%,
    #b0b305 51.57%
  );
  color: #000;
  mix-blend-mode: exclusion;
  background-clip: text;
  text-fill-color: transparent;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

@media only screen and (min-width: 105rem) {
  .headline {
    font-size: 32rem;
  }
}

@media only screen and (max-width: 60rem) {
  .headline {
    font-size: 26.5vw;
  }
}

@media only screen and (max-width: 30rem) {
  .headline {
    font-size: 50vw;
    line-height: 40vw;
    padding-top: 4vw;
  }
}

/* GET THE APP */

#get-the-app {
  display: flex;
  position: relative;
  z-index: 1;
}

#get-the-app .email-signup {
  display: flex;
  align-items: center;
  background-color: black;
  padding: 1rem;
  border-radius: 0.5rem;
}

@media only screen and (max-width: 30rem) {
  #get-the-app p,
  #get-the-app form {
    margin: 0;
  }
}

.email-signup p {
  font-size: 1.5rem;
  padding-left: 1rem;
  color: var(--color-background);
}

@media only screen and (max-width: 60rem) {
  #get-the-app .email-signup {
    flex-direction: column;
    padding: 1.5rem 1.25rem;
    row-gap: 1rem;
  }

  .email-signup .main-cta > input[type="email"] {
    width: 26rem;
  }
}

.main-cta input[type="email"],
.main-cta button {
  font-size: 1.5rem;
  height: 3rem;
}

.main-cta button {
  background-color: var(--color-primary);
  border: none;
  padding: 0 1rem;
}

@media only screen and (max-width: 80rem) {
  .email-signup p,
  .email-signup button,
  .email-signup .main-cta > input[type="email"] {
    font-size: 1rem;
  }

  .email-signup .main-cta > input[type="email"],
  .email-signup button {
    height: 2rem;
  }
}

@media only screen and (max-width: 40rem) {
  .email-signup .main-cta > input[type="email"] {
    width: 53vw;
    margin-left: 0;
  }

  #get-the-app p,
  #get-the-app form {
    margin: 0;
    padding: 0;
  }

  #email-signup input[type="email"],
  #email-signup form button,
  #email-signup p {
    width: 80vw;
    margin-left: 0;
  }

  #email-signup form button,
  #email-signup p {
    margin-bottom: 1rem;
  }

  #email-signup input[type="email"] {
    margin-bottom: 0.5rem;
  }
}

/* SCROLLING UI */

@keyframes scrolling {
  0% {
    transform: translateX(0vw);
  }

  100% {
    transform: translateX(-560vw);
  }
}

#horizontal-scroll-wrapper {
  position: relative;
  overflow-x: hidden;
  width: 100vw;
  height: 64vw;
}

.horizontal-scroll-content {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  animation: scrolling 70s linear infinite;
}

.float {
  box-shadow: 0px 3vw 3vw rgba(10, 11, 18, 0.287542),
    0px 1vw 1vw rgba(10, 11, 18, 0.238443), 0 0.5vw 0.5vw rgba(10, 11, 18, 0.2),
    0px 0.25vw 0.25vw rgba(10, 11, 18, 0.161557),
    0px 0.125vw 0.125vw rgba(10, 11, 18, 0.112458);
  border-radius: 1vw;
}

.full-width {
  width: 90vw;
}
/* ... */

